--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-RAILWAY_PROJECT_NAME=*******
-RAILWAY_ENVIRONMENT_NAME=production
-RAILWAY_SERVICE_NAME=CVC
-RAILWAY_PROJECT_ID=b3fc3fd4-f48c-4e09-970d-1ada92d2aa37
-RAILWAY_ENVIRONMENT_ID=c5f2d686-edd4-48ff-8ec3-d0ed22a7520e
-RAILWAY_SERVICE_ID=4c90616e-4464-44c2-8b77-b8a70c1681a9
+SPRING_DATASOURCE_URL=jdbc:postgresql://dpg-d0erjmk9c44c738cosg0-a.oregon-postgres.render.com:5432/cvc_web
+SPRING_DATASOURCE_USERNAME=cvc_web_user
+SPRING_DATASOURCE_PASSWORD=6Xv7BPMRFpiwA2n9TwIxXjqYbF5NVHrA
